# all-weather-frontend

./: .cursorignore  .env.sample  .eslintrc.json  .gitignore  .prettierignore  .sample.env.local  CLAUDE.md  CNAME  FRAME_TESTING.md  LICENSE  LOW_HANGING_FRUIT.md  MEMORY_OPTIMIZATION_REPORT.md  README.md  etherspot-test.js  funding.json  jest.config.js  lifi.ts  next.config.js  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json  vitest.config.js  vitest.config.ts  vitest.setup.js  withdraw_all_weather_contract.js
.github/: pull_request_template.md
.husky/: pre-commit
.serena/: project.yml
__tests__/: APRPopOver.test.jsx  RoutesPreview.test.jsx  TokenDropdowninput.test.jsx  TokenPriceService.test.js  UserBalanceInfo.test.jsx  apiErrorHandling.test.js  basepage.test.jsx  bundleIndex.test.jsx  chainHelper.test.js  chainOrder.test.js  chainOrder.test.jsx  chartUtils.test.js  contractInteraction.test.js  contractInteraction.test.jsx  dashboard.test.jsx  dustConversion.test.js  dynamicMinimumAmount.test.jsx  environment.test.js  etherspost.test.js  exampleUI.test.jsx  fetchMock.js  indexOverviews.test.jsx  indexesIndex.test.jsx  localStorage.test.js  logger.test.js  notification.test.js  oneInch.test.js  portfolioCalculation.test.js  rebalanceChart.test.js  (+7 more)
public/: 404.html  README.md  chainList.json  chain_image_downloader.py  manifest.json  project_image_downloader.py  pyproject.toml  token_image_downloader.py
public/chainPicturesWebp/: apr.json
public/performanceCharts/: performance_data.json
(+333 files in other folders)
